# zephyr-sht31-sensor

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  west.yml
docker/: Dockerfile  docker-compose.yml  dockerfile  entrypoint.sh  west-stm32.yml
python_receiver/: simple_receiver.py
scripts/: build.sh
temp_udp_app/: CMakeLists.txt  prj.conf
temp_udp_app/boards/: nucleo_h755zi_q.overlay
temp_udp_app/modules/sht3xd_reader/: sensor_handler.h  sensor_handler_test.h  sht3xd_reader.cpp  sht3xd_reader.h
temp_udp_app/modules/udp_client/: udp_client.cpp  udp_client.h
temp_udp_app/scripts/: build.sh  flash.sh
temp_udp_app/src/: main.cpp  main_timer.cpp  main_walltimer_callback.cpp
